# adbc-datafusion

./: .gitignore  .pre-commit-config.yaml  .rat-apache  .rat-excludes  CONTRIBUTING.md  LICENSE.txt  README.md
.github/: dependabot.yaml
.github/workflows/: dev.yaml  dev_issues.yaml  dev_pr.yaml  generate.toml  rust_release.yaml  rust_test.yaml  rust_test_pr.yaml
rust/: .gitignore  Cargo.toml  NOTICE.txt  README.md  about.toml  intercept-version-script.sh  license.tpl  manifest.toml  pixi.toml
rust/.cargo/: config.toml
rust/ci/: test_package.py
rust/ci/scripts/: pre-build.sh
rust/src/: lib.rs
rust/tests/: test_datafusion.rs
rust/validation/: pytest.ini
rust/validation/queries/ingest/: binary_view.toml  fixed_size_binary.toml  large_binary.toml  large_string.toml  string_view.toml  timestamptz_ms.toml
rust/validation/queries/type/literal/: time.json  time.schema.json  timestamp.json  timestamptz.schema.json
rust/validation/queries/type/select/: binary.setup.sql  string.schema.json  time.json  timestamp.json  timestamp.setup.sql  timestamptz.setup.sql
rust/validation/tests/: __init__.py  conftest.py  datafusion.py  generate_documentation.py  test_connection.py  test_ingest.py  test_query.py  test_statement.py
