# Copyright (c) 2025 ADBC Drivers Contributors
#
# This file has been modified from its original version, which is
# under the Apache License:
#
# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.

[package]
name = "adbc-driver-datafusion"
description = "ADBC driver for Apache DataFusion"
version = "0.1.0"
edition = "2024"

[dependencies]
adbc_core = "0.22.0"
adbc_ffi = "0.22.0"
arrow-array = "57.2"
arrow-buffer = "57.2"
arrow-schema = "57.2"
datafusion = { version = "52.1.0", default-features = false }
datafusion-substrait = { version = "52.1.0", default-features = false }
tokio = { version = "1.49", features = ["rt-multi-thread"] }
prost = "0.14.3"

[dev-dependencies]
arrow-select = "57.2.0"

[lib]
crate-type = ["lib", "cdylib"]
